Added First Experiment

--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temp</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style4.css">
 </head>
 <body>
-    <h1>Hello!</h1>
+    <header>
+        <div id="navbar">
+            <a>Home</a>
+            <a>About</a>
+            <a>Projects</a>
+            <a>Contacts</a>
+        </div>
+    </header>
+    <main>
+        <section id="home">
+            <h2>Home</h2>
+  <p>Welcome! I am Sahil, a student learning web development and Java full-stack.</p>
+           
+</section>
+<section id="about">
+  <h2>About</h2>
+  <p>I am a Computer Engineering student. I like building websites and learning new programming languages.</p>
+</section>
+<section id="projects">
+  <h2>Projects</h2>
+  <p>I have made simple login forms, portfolio pages, and small interactive programs using HTML, CSS, and Java.</p>
+</section>
+<section id="contact">
+  <h2>Contact</h2>
+  <p>You can contact me via email: sahil@vcet.edu.in or through social media platforms.</p>
+</section>
+
+</main>
+    <footer>
+        <p>Made with ❤️ | &copy; 2026 Sahil</p>
+    </footer>
 </body>
 </html>
